@@ -94,3 +94,4 @@
 20231024 ./watchlist/c/counts.sh added.
 20231024 ./watchlist/c/walk2c.sh added.
 20231024 ./watchlist/c/v.sh added.
+20231024 ./watchlist/c/walk2.sh added.
